// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`composition badge-burst > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 451,
      "y": 151,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 467,
      "y": 151,
    },
    {
      "fontSize": 14,
      "h": 25,
      "originId": "legal",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 1001,
    },
    {
      "fontSize": 87,
      "h": 207,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 533,
    },
    {
      "fontSize": 37,
      "h": 54,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 773,
    },
    {
      "h": 63,
      "originId": "cta",
      "type": "symbol",
      "w": 296,
      "x": 392,
      "y": 859,
    },
  ],
  "typeBudget": 1.5529227519633613,
}
`;

exports[`composition badge-burst > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 1920,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 425,
      "y": 269,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 445,
      "y": 269,
    },
    {
      "fontSize": 19,
      "h": 34,
      "originId": "legal",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1746,
    },
    {
      "fontSize": 116,
      "h": 276,
      "originId": "headline",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 886,
    },
    {
      "fontSize": 49,
      "h": 143,
      "originId": "sub",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1205,
    },
    {
      "h": 84,
      "originId": "cta",
      "type": "symbol",
      "w": 395,
      "x": 343,
      "y": 1391,
    },
  ],
  "typeBudget": 1.5529227519633613,
}
`;

exports[`composition badge-burst > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 675,
      "originId": "img",
      "type": "image",
      "w": 1200,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 42,
      "originId": "badge-bg",
      "type": "shape",
      "w": 143,
      "x": 529,
      "y": 95,
    },
    {
      "fontSize": 21,
      "h": 42,
      "originId": "badge",
      "type": "text",
      "w": 117,
      "x": 542,
      "y": 95,
    },
    {
      "fontSize": 12,
      "h": 22,
      "originId": "legal",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 608,
    },
    {
      "fontSize": 73,
      "h": 87,
      "originId": "headline",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 375,
    },
    {
      "fontSize": 31,
      "h": 45,
      "originId": "sub",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 489,
    },
    {
      "h": 53,
      "originId": "cta",
      "type": "symbol",
      "w": 248,
      "x": 476,
      "y": 546,
    },
  ],
  "typeBudget": 1.5529227519633613,
}
`;

exports[`composition banner-strip > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 848,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 864,
      "y": 54,
    },
    {
      "fontSize": 15,
      "h": 27,
      "originId": "legal",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 999,
    },
    {
      "fontSize": 92,
      "h": 219,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 530,
    },
    {
      "fontSize": 39,
      "h": 114,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 781,
    },
    {
      "h": 63,
      "originId": "cta",
      "type": "symbol",
      "w": 296,
      "x": 392,
      "y": 928,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`composition banner-strip > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 1920,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 777,
      "y": 80,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 797,
      "y": 80,
    },
    {
      "fontSize": 20,
      "h": 36,
      "originId": "legal",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1744,
    },
    {
      "fontSize": 122,
      "h": 435,
      "originId": "headline",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 979,
    },
    {
      "fontSize": 51,
      "h": 149,
      "originId": "sub",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1458,
    },
    {
      "h": 84,
      "originId": "cta",
      "type": "symbol",
      "w": 395,
      "x": 343,
      "y": 1647,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`composition banner-strip > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 675,
      "originId": "img",
      "type": "image",
      "w": 1200,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 40,
      "originId": "badge-bg",
      "type": "shape",
      "w": 136,
      "x": 1004,
      "y": 45,
    },
    {
      "fontSize": 20,
      "h": 40,
      "originId": "badge",
      "type": "text",
      "w": 112,
      "x": 1016,
      "y": 45,
    },
    {
      "fontSize": 11,
      "h": 20,
      "originId": "legal",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 572,
    },
    {
      "fontSize": 70,
      "h": 249,
      "originId": "headline",
      "type": "text",
      "w": 527,
      "x": 60,
      "y": 161,
    },
    {
      "fontSize": 30,
      "h": 87,
      "originId": "sub",
      "type": "text",
      "w": 527,
      "x": 60,
      "y": 419,
    },
    {
      "h": 48,
      "originId": "cta",
      "type": "symbol",
      "w": 227,
      "x": 764,
      "y": 515,
    },
  ],
  "typeBudget": 1.4065137213227479,
}
`;

exports[`composition centred-emblem > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 848,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 864,
      "y": 54,
    },
    {
      "fontSize": 13,
      "h": 23,
      "originId": "legal",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 1003,
    },
    {
      "fontSize": 83,
      "h": 197,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 363,
    },
    {
      "fontSize": 35,
      "h": 51,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 604,
    },
  ],
  "typeBudget": 1.3891493543928373,
}
`;

exports[`composition centred-emblem > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 777,
      "y": 80,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 797,
      "y": 80,
    },
    {
      "fontSize": 18,
      "h": 32,
      "originId": "legal",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1748,
    },
    {
      "fontSize": 110,
      "h": 261,
      "originId": "headline",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 662,
    },
    {
      "fontSize": 46,
      "h": 134,
      "originId": "sub",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 981,
    },
  ],
  "typeBudget": 1.3891493543928373,
}
`;

exports[`composition centred-emblem > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 42,
      "originId": "badge-bg",
      "type": "shape",
      "w": 143,
      "x": 997,
      "y": 45,
    },
    {
      "fontSize": 21,
      "h": 42,
      "originId": "badge",
      "type": "text",
      "w": 117,
      "x": 1010,
      "y": 45,
    },
    {
      "fontSize": 11,
      "h": 20,
      "originId": "legal",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 610,
    },
    {
      "fontSize": 69,
      "h": 82,
      "originId": "headline",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 232,
    },
    {
      "fontSize": 29,
      "h": 42,
      "originId": "sub",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 350,
    },
  ],
  "typeBudget": 1.3891493543928373,
}
`;

exports[`composition editorial-sidebar > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "editorial-sidebar-bg",
      "type": "shape",
      "w": 410,
      "x": 0,
      "y": 0,
    },
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 670,
      "x": 410,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 54,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 70,
      "y": 54,
    },
    {
      "fontSize": 11,
      "h": 20,
      "originId": "legal",
      "type": "text",
      "w": 302,
      "x": 54,
      "y": 1006,
    },
    {
      "fontSize": 47,
      "h": 165,
      "originId": "headline",
      "type": "text",
      "w": 302,
      "x": 54,
      "y": 388,
    },
    {
      "fontSize": 18,
      "h": 63,
      "originId": "sub",
      "type": "text",
      "w": 302,
      "x": 54,
      "y": 583,
    },
    {
      "h": 63,
      "originId": "cta",
      "type": "symbol",
      "w": 296,
      "x": 54,
      "y": 662,
    },
  ],
  "typeBudget": 3.125586047383884,
}
`;

exports[`composition editorial-sidebar > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 1920,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 777,
      "y": 80,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 797,
      "y": 80,
    },
    {
      "fontSize": 14,
      "h": 25,
      "originId": "legal",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1755,
    },
    {
      "fontSize": 88,
      "h": 209,
      "originId": "headline",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1229,
    },
    {
      "fontSize": 46,
      "h": 134,
      "originId": "sub",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1482,
    },
    {
      "h": 84,
      "originId": "cta",
      "type": "symbol",
      "w": 395,
      "x": 343,
      "y": 1659,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`composition editorial-sidebar > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 675,
      "originId": "editorial-sidebar-bg",
      "type": "shape",
      "w": 456,
      "x": 0,
      "y": 0,
    },
    {
      "h": 675,
      "originId": "img",
      "type": "image",
      "w": 744,
      "x": 456,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 42,
      "originId": "badge-bg",
      "type": "shape",
      "w": 143,
      "x": 60,
      "y": 45,
    },
    {
      "fontSize": 21,
      "h": 42,
      "originId": "badge",
      "type": "text",
      "w": 117,
      "x": 73,
      "y": 45,
    },
    {
      "fontSize": 9,
      "h": 16,
      "originId": "legal",
      "type": "text",
      "w": 351,
      "x": 60,
      "y": 614,
    },
    {
      "fontSize": 44,
      "h": 138,
      "originId": "headline",
      "type": "text",
      "w": 351,
      "x": 60,
      "y": 210,
    },
    {
      "fontSize": 18,
      "h": 52,
      "originId": "sub",
      "type": "text",
      "w": 351,
      "x": 60,
      "y": 373,
    },
    {
      "h": 53,
      "originId": "cta",
      "type": "symbol",
      "w": 248,
      "x": 60,
      "y": 438,
    },
  ],
  "typeBudget": 3.125586047383884,
}
`;

exports[`composition hero-fullbleed > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 848,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 864,
      "y": 54,
    },
    {
      "fontSize": 15,
      "h": 27,
      "originId": "legal",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 999,
    },
    {
      "fontSize": 92,
      "h": 219,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 530,
    },
    {
      "fontSize": 39,
      "h": 114,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 781,
    },
    {
      "h": 63,
      "originId": "cta",
      "type": "symbol",
      "w": 296,
      "x": 392,
      "y": 928,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`composition hero-fullbleed > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 1920,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 777,
      "y": 80,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 797,
      "y": 80,
    },
    {
      "fontSize": 20,
      "h": 36,
      "originId": "legal",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1744,
    },
    {
      "fontSize": 122,
      "h": 435,
      "originId": "headline",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 979,
    },
    {
      "fontSize": 51,
      "h": 149,
      "originId": "sub",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1458,
    },
    {
      "h": 84,
      "originId": "cta",
      "type": "symbol",
      "w": 395,
      "x": 343,
      "y": 1647,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`composition hero-fullbleed > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 675,
      "originId": "img",
      "type": "image",
      "w": 1200,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 40,
      "originId": "badge-bg",
      "type": "shape",
      "w": 136,
      "x": 1004,
      "y": 45,
    },
    {
      "fontSize": 20,
      "h": 40,
      "originId": "badge",
      "type": "text",
      "w": 112,
      "x": 1016,
      "y": 45,
    },
    {
      "fontSize": 11,
      "h": 20,
      "originId": "legal",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 610,
    },
    {
      "fontSize": 70,
      "h": 83,
      "originId": "headline",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 372,
    },
    {
      "fontSize": 30,
      "h": 44,
      "originId": "sub",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 482,
    },
    {
      "h": 48,
      "originId": "cta",
      "type": "symbol",
      "w": 227,
      "x": 487,
      "y": 553,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`composition minimal-centered > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 428,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 451,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 467,
      "y": 54,
    },
    {
      "fontSize": 13,
      "h": 23,
      "originId": "legal",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 1003,
    },
    {
      "fontSize": 83,
      "h": 197,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 577,
    },
    {
      "fontSize": 35,
      "h": 51,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 807,
    },
    {
      "h": 63,
      "originId": "cta",
      "type": "symbol",
      "w": 296,
      "x": 392,
      "y": 890,
    },
  ],
  "typeBudget": 1.444715328568551,
}
`;

exports[`composition minimal-centered > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 440,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 425,
      "y": 80,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 445,
      "y": 80,
    },
    {
      "fontSize": 18,
      "h": 32,
      "originId": "legal",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1748,
    },
    {
      "fontSize": 110,
      "h": 261,
      "originId": "headline",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 878,
    },
    {
      "fontSize": 46,
      "h": 134,
      "originId": "sub",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1182,
    },
    {
      "h": 84,
      "originId": "cta",
      "type": "symbol",
      "w": 395,
      "x": 343,
      "y": 1359,
    },
  ],
  "typeBudget": 1.444715328568551,
}
`;

exports[`composition minimal-centered > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 460,
      "originId": "img",
      "type": "image",
      "w": 1200,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 42,
      "originId": "badge-bg",
      "type": "shape",
      "w": 143,
      "x": 529,
      "y": 45,
    },
    {
      "fontSize": 21,
      "h": 42,
      "originId": "badge",
      "type": "text",
      "w": 117,
      "x": 542,
      "y": 45,
    },
    {
      "fontSize": 11,
      "h": 20,
      "originId": "legal",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 610,
    },
    {
      "fontSize": 10,
      "h": 11,
      "originId": "headline",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 523,
    },
    {
      "fontSize": 10,
      "h": 14,
      "originId": "sub",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 551,
    },
    {
      "h": 53,
      "originId": "cta",
      "type": "symbol",
      "w": 248,
      "x": 476,
      "y": 574,
    },
  ],
  "typeBudget": 1.444715328568551,
}
`;

exports[`composition overlap-card > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 848,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 864,
      "y": 54,
    },
    {
      "fontSize": 15,
      "h": 27,
      "originId": "legal",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 999,
    },
    {
      "fontSize": 92,
      "h": 219,
      "originId": "headline",
      "type": "text",
      "w": 842,
      "x": 119,
      "y": 541,
    },
    {
      "fontSize": 39,
      "h": 114,
      "originId": "sub",
      "type": "text",
      "w": 842,
      "x": 119,
      "y": 782,
    },
    {
      "h": 63,
      "originId": "cta",
      "type": "symbol",
      "w": 296,
      "x": 392,
      "y": 917,
    },
  ],
  "typeBudget": 1.6179504245281287,
}
`;

exports[`composition overlap-card > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 1920,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 777,
      "y": 80,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 797,
      "y": 80,
    },
    {
      "fontSize": 20,
      "h": 36,
      "originId": "legal",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1744,
    },
    {
      "fontSize": 122,
      "h": 435,
      "originId": "headline",
      "type": "text",
      "w": 763,
      "x": 158,
      "y": 920,
    },
    {
      "fontSize": 51,
      "h": 223,
      "originId": "sub",
      "type": "text",
      "w": 763,
      "x": 158,
      "y": 1384,
    },
    {
      "h": 84,
      "originId": "cta",
      "type": "symbol",
      "w": 395,
      "x": 342,
      "y": 1636,
    },
  ],
  "typeBudget": 1.6179504245281287,
}
`;

exports[`composition overlap-card > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 675,
      "originId": "img",
      "type": "image",
      "w": 1200,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 40,
      "originId": "badge-bg",
      "type": "shape",
      "w": 136,
      "x": 1004,
      "y": 45,
    },
    {
      "fontSize": 20,
      "h": 40,
      "originId": "badge",
      "type": "text",
      "w": 112,
      "x": 1016,
      "y": 45,
    },
    {
      "fontSize": 11,
      "h": 20,
      "originId": "legal",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 610,
    },
    {
      "fontSize": 70,
      "h": 166,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 114,
      "y": 296,
    },
    {
      "fontSize": 30,
      "h": 44,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 114,
      "y": 480,
    },
    {
      "h": 48,
      "originId": "cta",
      "type": "symbol",
      "w": 227,
      "x": 487,
      "y": 542,
    },
  ],
  "typeBudget": 1.6179504245281287,
}
`;

exports[`composition poster-frame > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 394,
      "originId": "img",
      "type": "image",
      "w": 886,
      "x": 97,
      "y": 97,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 848,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 864,
      "y": 54,
    },
    {
      "fontSize": 13,
      "h": 23,
      "originId": "legal",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 1003,
    },
    {
      "fontSize": 83,
      "h": 197,
      "originId": "headline",
      "type": "text",
      "w": 886,
      "x": 97,
      "y": 524,
    },
    {
      "fontSize": 35,
      "h": 102,
      "originId": "sub",
      "type": "text",
      "w": 886,
      "x": 97,
      "y": 753,
    },
    {
      "h": 63,
      "originId": "cta",
      "type": "symbol",
      "w": 296,
      "x": 392,
      "y": 887,
    },
  ],
  "typeBudget": 1.7650368267579581,
}
`;

exports[`composition poster-frame > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 802,
      "originId": "img",
      "type": "image",
      "w": 821,
      "x": 130,
      "y": 138,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 777,
      "y": 80,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 797,
      "y": 80,
    },
    {
      "fontSize": 18,
      "h": 32,
      "originId": "legal",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1748,
    },
    {
      "fontSize": 110,
      "h": 392,
      "originId": "headline",
      "type": "text",
      "w": 821,
      "x": 130,
      "y": 983,
    },
    {
      "fontSize": 46,
      "h": 134,
      "originId": "sub",
      "type": "text",
      "w": 821,
      "x": 130,
      "y": 1418,
    },
    {
      "h": 84,
      "originId": "cta",
      "type": "symbol",
      "w": 395,
      "x": 343,
      "y": 1595,
    },
  ],
  "typeBudget": 1.7650368267579581,
}
`;

exports[`composition poster-frame > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 229,
      "originId": "img",
      "type": "image",
      "w": 1008,
      "x": 96,
      "y": 81,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 42,
      "originId": "badge-bg",
      "type": "shape",
      "w": 143,
      "x": 997,
      "y": 45,
    },
    {
      "fontSize": 21,
      "h": 42,
      "originId": "badge",
      "type": "text",
      "w": 117,
      "x": 1010,
      "y": 45,
    },
    {
      "fontSize": 11,
      "h": 20,
      "originId": "legal",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 610,
    },
    {
      "fontSize": 69,
      "h": 82,
      "originId": "headline",
      "type": "text",
      "w": 1008,
      "x": 96,
      "y": 337,
    },
    {
      "fontSize": 29,
      "h": 42,
      "originId": "sub",
      "type": "text",
      "w": 1008,
      "x": 96,
      "y": 446,
    },
    {
      "h": 53,
      "originId": "cta",
      "type": "symbol",
      "w": 248,
      "x": 476,
      "y": 515,
    },
  ],
  "typeBudget": 1.7650368267579581,
}
`;

exports[`composition poster-left > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 1080,
      "originId": "poster-left-scrim",
      "type": "shape",
      "w": 670,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 54,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 70,
      "y": 54,
    },
    {
      "fontSize": 15,
      "h": 27,
      "originId": "legal",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 999,
    },
    {
      "fontSize": 92,
      "h": 219,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 133,
    },
    {
      "fontSize": 39,
      "h": 114,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 382,
    },
    {
      "h": 63,
      "originId": "cta",
      "type": "symbol",
      "w": 296,
      "x": 54,
      "y": 528,
    },
  ],
  "typeBudget": 1.9740543457161375,
}
`;

exports[`composition poster-left > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 1920,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 1920,
      "originId": "poster-left-scrim",
      "type": "shape",
      "w": 670,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 72,
      "y": 80,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 92,
      "y": 80,
    },
    {
      "fontSize": 20,
      "h": 36,
      "originId": "legal",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1744,
    },
    {
      "fontSize": 122,
      "h": 435,
      "originId": "headline",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 181,
    },
    {
      "fontSize": 51,
      "h": 149,
      "originId": "sub",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 659,
    },
    {
      "h": 84,
      "originId": "cta",
      "type": "symbol",
      "w": 395,
      "x": 72,
      "y": 852,
    },
  ],
  "typeBudget": 1.9740543457161375,
}
`;

exports[`composition poster-left > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 675,
      "originId": "img",
      "type": "image",
      "w": 1200,
      "x": 0,
      "y": 0,
    },
    {
      "h": 675,
      "originId": "poster-left-scrim",
      "type": "shape",
      "w": 744,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 40,
      "originId": "badge-bg",
      "type": "shape",
      "w": 136,
      "x": 60,
      "y": 45,
    },
    {
      "fontSize": 20,
      "h": 40,
      "originId": "badge",
      "type": "text",
      "w": 112,
      "x": 72,
      "y": 45,
    },
    {
      "fontSize": 11,
      "h": 20,
      "originId": "legal",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 610,
    },
    {
      "fontSize": 70,
      "h": 83,
      "originId": "headline",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 106,
    },
    {
      "fontSize": 30,
      "h": 44,
      "originId": "sub",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 216,
    },
    {
      "h": 48,
      "originId": "cta",
      "type": "symbol",
      "w": 227,
      "x": 60,
      "y": 287,
    },
  ],
  "typeBudget": 1.9740543457161375,
}
`;

exports[`composition split-panel > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "split-panel-bg",
      "type": "shape",
      "w": 497,
      "x": 0,
      "y": 0,
    },
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 583,
      "x": 497,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 54,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 70,
      "y": 54,
    },
    {
      "fontSize": 11,
      "h": 20,
      "originId": "legal",
      "type": "text",
      "w": 389,
      "x": 54,
      "y": 1006,
    },
    {
      "fontSize": 47,
      "h": 165,
      "originId": "headline",
      "type": "text",
      "w": 389,
      "x": 54,
      "y": 388,
    },
    {
      "fontSize": 21,
      "h": 63,
      "originId": "sub",
      "type": "text",
      "w": 389,
      "x": 54,
      "y": 583,
    },
    {
      "h": 63,
      "originId": "cta",
      "type": "symbol",
      "w": 296,
      "x": 54,
      "y": 662,
    },
  ],
  "typeBudget": 3.125586047383884,
}
`;

exports[`composition split-panel > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 1920,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 777,
      "y": 80,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 797,
      "y": 80,
    },
    {
      "fontSize": 14,
      "h": 25,
      "originId": "legal",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1755,
    },
    {
      "fontSize": 88,
      "h": 209,
      "originId": "headline",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1229,
    },
    {
      "fontSize": 46,
      "h": 134,
      "originId": "sub",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1482,
    },
    {
      "h": 84,
      "originId": "cta",
      "type": "symbol",
      "w": 395,
      "x": 343,
      "y": 1659,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`composition split-panel > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 675,
      "originId": "split-panel-bg",
      "type": "shape",
      "w": 552,
      "x": 0,
      "y": 0,
    },
    {
      "h": 675,
      "originId": "img",
      "type": "image",
      "w": 648,
      "x": 552,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 42,
      "originId": "badge-bg",
      "type": "shape",
      "w": 143,
      "x": 60,
      "y": 45,
    },
    {
      "fontSize": 21,
      "h": 42,
      "originId": "badge",
      "type": "text",
      "w": 117,
      "x": 73,
      "y": 45,
    },
    {
      "fontSize": 9,
      "h": 16,
      "originId": "legal",
      "type": "text",
      "w": 447,
      "x": 60,
      "y": 614,
    },
    {
      "fontSize": 55,
      "h": 138,
      "originId": "headline",
      "type": "text",
      "w": 447,
      "x": 60,
      "y": 210,
    },
    {
      "fontSize": 18,
      "h": 52,
      "originId": "sub",
      "type": "text",
      "w": 447,
      "x": 60,
      "y": 373,
    },
    {
      "h": 53,
      "originId": "cta",
      "type": "symbol",
      "w": 248,
      "x": 60,
      "y": 438,
    },
  ],
  "typeBudget": 3.125586047383884,
}
`;

exports[`composition stacked-thirds > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 595,
      "originId": "img",
      "type": "image",
      "w": 972,
      "x": 54,
      "y": 293,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 848,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 864,
      "y": 54,
    },
    {
      "fontSize": 12,
      "h": 22,
      "originId": "legal",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 450,
    },
    {
      "fontSize": 73,
      "h": 173,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 133,
    },
    {
      "fontSize": 35,
      "h": 51,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 316,
    },
    {
      "h": 63,
      "originId": "cta",
      "type": "symbol",
      "w": 296,
      "x": 392,
      "y": 377,
    },
  ],
  "typeBudget": 1.8753516284303302,
}
`;

exports[`composition stacked-thirds > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 1131,
      "originId": "img",
      "type": "image",
      "w": 936,
      "x": 72,
      "y": 400,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 777,
      "y": 80,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 797,
      "y": 80,
    },
    {
      "fontSize": 16,
      "h": 29,
      "originId": "legal",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 666,
    },
    {
      "fontSize": 98,
      "h": 233,
      "originId": "headline",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 176,
    },
    {
      "fontSize": 46,
      "h": 134,
      "originId": "sub",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 422,
    },
    {
      "h": 84,
      "originId": "cta",
      "type": "symbol",
      "w": 395,
      "x": 343,
      "y": 569,
    },
  ],
  "typeBudget": 1.8753516284303302,
}
`;

exports[`composition stacked-thirds > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 348,
      "originId": "img",
      "type": "image",
      "w": 1200,
      "x": 0,
      "y": 135,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 42,
      "originId": "badge-bg",
      "type": "shape",
      "w": 143,
      "x": 997,
      "y": 45,
    },
    {
      "fontSize": 21,
      "h": 42,
      "originId": "badge",
      "type": "text",
      "w": 117,
      "x": 1010,
      "y": 45,
    },
    {
      "fontSize": 10,
      "h": 18,
      "originId": "legal",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 612,
    },
    {
      "fontSize": 61,
      "h": 72,
      "originId": "headline",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 110,
    },
    {
      "fontSize": 29,
      "h": 42,
      "originId": "sub",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 501,
    },
    {
      "h": 53,
      "originId": "cta",
      "type": "symbol",
      "w": 248,
      "x": 476,
      "y": 561,
    },
  ],
  "typeBudget": 1.7190723260611362,
}
`;

exports[`composition top-bottom > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 601,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 249,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 848,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 864,
      "y": 54,
    },
    {
      "fontSize": 12,
      "h": 22,
      "originId": "legal",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 1004,
    },
    {
      "fontSize": 73,
      "h": 173,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 133,
    },
    {
      "fontSize": 35,
      "h": 51,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 871,
    },
    {
      "h": 63,
      "originId": "cta",
      "type": "symbol",
      "w": 296,
      "x": 392,
      "y": 931,
    },
  ],
  "typeBudget": 1.7190723260611362,
}
`;

exports[`composition top-bottom > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 1137,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 342,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 777,
      "y": 80,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 797,
      "y": 80,
    },
    {
      "fontSize": 16,
      "h": 29,
      "originId": "legal",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1751,
    },
    {
      "fontSize": 98,
      "h": 233,
      "originId": "headline",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 176,
    },
    {
      "fontSize": 46,
      "h": 134,
      "originId": "sub",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1507,
    },
    {
      "h": 84,
      "originId": "cta",
      "type": "symbol",
      "w": 395,
      "x": 343,
      "y": 1654,
    },
  ],
  "typeBudget": 1.7190723260611362,
}
`;

exports[`composition top-bottom > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 348,
      "originId": "img",
      "type": "image",
      "w": 1200,
      "x": 0,
      "y": 135,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 42,
      "originId": "badge-bg",
      "type": "shape",
      "w": 143,
      "x": 997,
      "y": 45,
    },
    {
      "fontSize": 21,
      "h": 42,
      "originId": "badge",
      "type": "text",
      "w": 117,
      "x": 1010,
      "y": 45,
    },
    {
      "fontSize": 10,
      "h": 18,
      "originId": "legal",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 612,
    },
    {
      "fontSize": 61,
      "h": 72,
      "originId": "headline",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 110,
    },
    {
      "fontSize": 29,
      "h": 42,
      "originId": "sub",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 501,
    },
    {
      "h": 53,
      "originId": "cta",
      "type": "symbol",
      "w": 248,
      "x": 476,
      "y": 561,
    },
  ],
  "typeBudget": 1.7190723260611362,
}
`;

exports[`composition type-dominant > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 848,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 864,
      "y": 54,
    },
    {
      "fontSize": 13,
      "h": 23,
      "originId": "legal",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 1003,
    },
    {
      "fontSize": 83,
      "h": 197,
      "originId": "headline",
      "type": "text",
      "w": 929,
      "x": 76,
      "y": 363,
    },
    {
      "fontSize": 35,
      "h": 51,
      "originId": "sub",
      "type": "text",
      "w": 929,
      "x": 76,
      "y": 604,
    },
    {
      "h": 63,
      "originId": "cta",
      "type": "symbol",
      "w": 296,
      "x": 392,
      "y": 698,
    },
  ],
  "typeBudget": 1.9051191145958914,
}
`;

exports[`composition type-dominant > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 777,
      "y": 80,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 797,
      "y": 80,
    },
    {
      "fontSize": 18,
      "h": 32,
      "originId": "legal",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1748,
    },
    {
      "fontSize": 110,
      "h": 261,
      "originId": "headline",
      "type": "text",
      "w": 878,
      "x": 101,
      "y": 662,
    },
    {
      "fontSize": 46,
      "h": 134,
      "originId": "sub",
      "type": "text",
      "w": 878,
      "x": 101,
      "y": 981,
    },
    {
      "h": 84,
      "originId": "cta",
      "type": "symbol",
      "w": 395,
      "x": 343,
      "y": 1172,
    },
  ],
  "typeBudget": 1.9051191145958914,
}
`;

exports[`composition type-dominant > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 42,
      "originId": "badge-bg",
      "type": "shape",
      "w": 143,
      "x": 997,
      "y": 45,
    },
    {
      "fontSize": 21,
      "h": 42,
      "originId": "badge",
      "type": "text",
      "w": 117,
      "x": 1010,
      "y": 45,
    },
    {
      "fontSize": 11,
      "h": 20,
      "originId": "legal",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 610,
    },
    {
      "fontSize": 69,
      "h": 82,
      "originId": "headline",
      "type": "text",
      "w": 1044,
      "x": 78,
      "y": 232,
    },
    {
      "fontSize": 29,
      "h": 42,
      "originId": "sub",
      "type": "text",
      "w": 1044,
      "x": 78,
      "y": 350,
    },
    {
      "h": 53,
      "originId": "cta",
      "type": "symbol",
      "w": 248,
      "x": 476,
      "y": 428,
    },
  ],
  "typeBudget": 1.9051191145958914,
}
`;

exports[`headline emphasis > does not change any geometry 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 848,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 864,
      "y": 54,
    },
    {
      "fontSize": 15,
      "h": 27,
      "originId": "legal",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 999,
    },
    {
      "fontSize": 92,
      "h": 219,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 530,
    },
    {
      "fontSize": 39,
      "h": 114,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 781,
    },
    {
      "h": 63,
      "originId": "cta",
      "type": "symbol",
      "w": 296,
      "x": 392,
      "y": 928,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`legacy composition badge-burst slot variants > with no imagery at all, which redirects the panel layouts 1`] = `
{
  "children": [
    {
      "fontSize": 87,
      "h": 207,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 656,
    },
    {
      "fontSize": 37,
      "h": 54,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 896,
    },
    {
      "h": 63,
      "originId": "cta",
      "type": "symbol",
      "w": 296,
      "x": 392,
      "y": 963,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`legacy composition badge-burst slot variants > without a footer, so the balance shift stays capped 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "fontSize": 87,
      "h": 207,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 656,
    },
    {
      "fontSize": 37,
      "h": 54,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 896,
    },
    {
      "h": 63,
      "originId": "cta",
      "type": "symbol",
      "w": 296,
      "x": 392,
      "y": 963,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`legacy composition editorial-sidebar slot variants > with no imagery at all, which redirects the panel layouts 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "editorial-sidebar-bg",
      "type": "shape",
      "w": 410,
      "x": 0,
      "y": 0,
    },
    {
      "fontSize": 47,
      "h": 165,
      "originId": "headline",
      "type": "text",
      "w": 302,
      "x": 54,
      "y": 200,
    },
    {
      "fontSize": 18,
      "h": 63,
      "originId": "sub",
      "type": "text",
      "w": 302,
      "x": 54,
      "y": 395,
    },
    {
      "h": 63,
      "originId": "cta",
      "type": "symbol",
      "w": 296,
      "x": 54,
      "y": 474,
    },
  ],
  "typeBudget": 3.125586047383884,
}
`;

exports[`legacy composition editorial-sidebar slot variants > without a footer, so the balance shift stays capped 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "editorial-sidebar-bg",
      "type": "shape",
      "w": 410,
      "x": 0,
      "y": 0,
    },
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 670,
      "x": 410,
      "y": 0,
    },
    {
      "fontSize": 47,
      "h": 165,
      "originId": "headline",
      "type": "text",
      "w": 302,
      "x": 54,
      "y": 200,
    },
    {
      "fontSize": 18,
      "h": 63,
      "originId": "sub",
      "type": "text",
      "w": 302,
      "x": 54,
      "y": 395,
    },
    {
      "h": 63,
      "originId": "cta",
      "type": "symbol",
      "w": 296,
      "x": 54,
      "y": 474,
    },
  ],
  "typeBudget": 3.125586047383884,
}
`;

exports[`legacy composition hero-fullbleed slot variants > with no imagery at all, which redirects the panel layouts 1`] = `
{
  "children": [
    {
      "fontSize": 92,
      "h": 219,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 584,
    },
    {
      "fontSize": 39,
      "h": 114,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 836,
    },
    {
      "h": 63,
      "originId": "cta",
      "type": "symbol",
      "w": 296,
      "x": 392,
      "y": 963,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`legacy composition hero-fullbleed slot variants > without a footer, so the balance shift stays capped 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "fontSize": 92,
      "h": 219,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 584,
    },
    {
      "fontSize": 39,
      "h": 114,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 836,
    },
    {
      "h": 63,
      "originId": "cta",
      "type": "symbol",
      "w": 296,
      "x": 392,
      "y": 963,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`legacy composition minimal-centered slot variants > with no imagery at all, which redirects the panel layouts 1`] = `
{
  "children": [
    {
      "fontSize": 83,
      "h": 197,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 362,
    },
    {
      "fontSize": 35,
      "h": 51,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 591,
    },
    {
      "h": 63,
      "originId": "cta",
      "type": "symbol",
      "w": 296,
      "x": 392,
      "y": 674,
    },
  ],
  "typeBudget": 1.444715328568551,
}
`;

exports[`legacy composition minimal-centered slot variants > without a footer, so the balance shift stays capped 1`] = `
{
  "children": [
    {
      "h": 428,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "fontSize": 83,
      "h": 197,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 570,
    },
    {
      "fontSize": 35,
      "h": 51,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 800,
    },
    {
      "h": 63,
      "originId": "cta",
      "type": "symbol",
      "w": 296,
      "x": 392,
      "y": 883,
    },
  ],
  "typeBudget": 1.444715328568551,
}
`;

exports[`legacy composition split-panel slot variants > with no imagery at all, which redirects the panel layouts 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "split-panel-bg",
      "type": "shape",
      "w": 497,
      "x": 0,
      "y": 0,
    },
    {
      "fontSize": 47,
      "h": 165,
      "originId": "headline",
      "type": "text",
      "w": 389,
      "x": 54,
      "y": 200,
    },
    {
      "fontSize": 21,
      "h": 63,
      "originId": "sub",
      "type": "text",
      "w": 389,
      "x": 54,
      "y": 395,
    },
    {
      "h": 63,
      "originId": "cta",
      "type": "symbol",
      "w": 296,
      "x": 54,
      "y": 474,
    },
  ],
  "typeBudget": 3.125586047383884,
}
`;

exports[`legacy composition split-panel slot variants > without a footer, so the balance shift stays capped 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "split-panel-bg",
      "type": "shape",
      "w": 497,
      "x": 0,
      "y": 0,
    },
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 583,
      "x": 497,
      "y": 0,
    },
    {
      "fontSize": 47,
      "h": 165,
      "originId": "headline",
      "type": "text",
      "w": 389,
      "x": 54,
      "y": 200,
    },
    {
      "fontSize": 21,
      "h": 63,
      "originId": "sub",
      "type": "text",
      "w": 389,
      "x": 54,
      "y": 395,
    },
    {
      "h": 63,
      "originId": "cta",
      "type": "symbol",
      "w": 296,
      "x": 54,
      "y": 474,
    },
  ],
  "typeBudget": 3.125586047383884,
}
`;

exports[`legacy composition top-bottom slot variants > with no imagery at all, which redirects the panel layouts 1`] = `
{
  "children": [
    {
      "fontSize": 73,
      "h": 173,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 54,
    },
    {
      "fontSize": 35,
      "h": 51,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 249,
    },
    {
      "h": 63,
      "originId": "cta",
      "type": "symbol",
      "w": 296,
      "x": 392,
      "y": 321,
    },
  ],
  "typeBudget": 1.7190723260611362,
}
`;

exports[`legacy composition top-bottom slot variants > without a footer, so the balance shift stays capped 1`] = `
{
  "children": [
    {
      "h": 639,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 249,
    },
    {
      "fontSize": 73,
      "h": 173,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 54,
    },
    {
      "fontSize": 35,
      "h": 51,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 909,
    },
    {
      "h": 63,
      "originId": "cta",
      "type": "symbol",
      "w": 296,
      "x": 392,
      "y": 963,
    },
  ],
  "typeBudget": 1.7190723260611362,
}
`;
